Step 23.17: Add two classes to fix an issue with overflow

--- a/client/main.scss
+++ b/client/main.scss
@@ -19,6 +19,15 @@ body {
   margin: 0;
 }
 
+body.mobile {
+  overflow: hidden;
+}
+
+body.web {
+  overflow: visible;
+  position: initial;
+}
+
 .sebm-google-map-container {
   width: 450px;
   height: 450px;
